corrected cert container display flex to flex inline to correct issue with stars not showing correctly on other pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ li > a {
 ======++++=======*/
 
 .certs-container {
-    display: flex;
+    display:inline-flex;
     flex-wrap: wrap; 
     align-items: center;
     justify-content: center;
